2009-05-25  Manuel Cerón  <ceronman@gmail.com>

	* icons: 
